--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,3 +6,12 @@
     name: jenkins
     state: started
     enabled: yes
+
+- name: configure default users
+  template:
+    src: var/lib/jenkins/init.groovy.d/basic-security.groovy
+    dest: "{{ jenkins_home }}/init.groovy.d/basic-security.groovy"
+    owner: jenkins
+    group: jenkins
+    mode: 0775
+  register: jenkins_users_config
